# hermit-newlib

./: .gitignore  config.sub
libgloss/: Makefile.in  aclocal.m4  configure
libgloss/aarch64/: acinclude.m4
libgloss/riscv/: semihost_stat.h
newlib/: Makefile.am  aclocal.m4  configure  configure.host
newlib/libc/: acinclude.m4
newlib/libc/include/sys/: _timespec.h  _types.h  config.h  features.h  select.h  signal.h  stat.h
newlib/libc/machine/x86_64/: memcpy.S  memset.S  setjmp.S
newlib/libc/stdlib/: _mallocr.c
newlib/libc/sys/: Makefile.inc
newlib/libc/sys/hermit/: Makefile.am  Makefile.in  Makefile.inc  README.md  conf.c  config.h  configure  context.S  crt0.c  dirent.c  env.c  fcntl.c  inet_ntoa.c  ldso.c  malloc.c  misc.c  mman.c  network.c  process.c  readlink.c  sbrk.c  sched.c  select.c  stat.c  symlink.c  syscall.h  time.c  unistd.c
newlib/libc/sys/hermit/include/: byteswap.h  dlfcn.h  hermit.h  netdb.h  poll.h  pthread.h
newlib/libc/sys/hermit/include/arpa/: inet.h
newlib/libc/sys/hermit/include/bits/: byteswap.h
newlib/libc/sys/hermit/include/hermit/: config.h  stat.h  syscall.h
newlib/libc/sys/hermit/include/netinet/: in.h  tcp.h
newlib/libc/sys/hermit/include/pthread/: pthread.h
newlib/libc/sys/hermit/include/sys/: dirent.h  errno.h  eventfd.h  ioctl.h  mman.h  poll.h  socket.h  syslimits.h  uio.h  utsname.h
newlib/libc/sys/hermit/signal/: kill.c  sigaction.c  sigprocmask.c  sigtimedwait.c
newlib/libc/sys/hermit/stdio/: rename.c
newlib/libc/sys/hermit/sys/: fcntl.h
